--- a/css/canvasser.css
+++ b/css/canvasser.css
@@ -8,6 +8,7 @@ and open the template in the editor.
     Author     : user
 */
 
+
 .title{
     text-align: center;
     font-size: 2.25em;
@@ -24,7 +25,7 @@ and open the template in the editor.
 }
 
 td{
-
+    vertical-align: top;
 }
 
 .contentspace{
