--- a/css/canvasser.css
+++ b/css/canvasser.css
@@ -63,3 +63,82 @@ a{
     padding-left: 20px;
     padding-right: 20px;
 }
+
+.header{
+    display: block;
+    background-color: rgb(200,200,200);
+    padding-bottom: 20px;
+    border-bottom: 2px black solid;
+}
+
+.titlecenter{
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    font-size: 2em;
+}
+
+.imagebank{
+    float: right;
+    background-image: url("../image/checker.jpg");
+    border: 2px black solid;
+    width: 200px;
+    height: 600px;
+    overflow-y: scroll;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.objectbank{
+    float: right;
+    border: 2px black solid;
+    width: 150px;
+    height: 600px;
+    overflow-y: scroll;
+    margin-right: 5px;
+    margin-left: 5px;
+    background-color: white;
+}
+
+.imagebank img {
+    width:100%;
+    height:auto;
+}
+
+.imagetext{
+    background-color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: 2px black solid;
+}
+
+.imageid{
+    width:60%;
+    vertical-align:middle;
+}
+
+#graphical{
+    display: inline-block;
+    width: 100%;
+    background-color: rgb(230,230,230);
+}
+
+.activity{
+    float:left;
+    border: 2px white solid;
+}
+
+#properties{
+    width:100%;
+    background-color: rgb(200,200,200);
+}
+
+.proptitle{
+    width:100%;
+    background-color: rgb(240,240,240);
+    border: 2px black solid;
+    text-align: center;
+    font-size: 1.5em;
+}
+
