--- a/css/canvasser.css
+++ b/css/canvasser.css
@@ -8,6 +8,24 @@ and open the template in the editor.
     Author     : user
 */
 
+@font-face {
+    font-family: title;
+    src: url(../font/04B_30__.woff);
+}
+
+@font-face {
+    font-family: button;
+    src: url(../font/CharriotDeluxe.woff);
+}
+
+@font-face {
+    font-family: selecttext;
+    src: url(../font/alterebro-pixel-font.woff);
+}
+
+.right{
+    float: right;
+}
 
 .title{
     text-align: center;
@@ -67,47 +85,79 @@ a{
 .header{
     display: block;
     background-color: rgb(243, 243, 243);
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-bottom: 2px #dadada solid;
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 .titlecenter{
+    font-family: title;
     text-align: center;
     position: absolute;
     left: 0;
     right: 0;
     font-size: 2em;
-    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-bottom: 15px;
+    color: crimson;
 }
 
-.imagebank{
+#objectbank{
     float: right;
-    background-image: url("../image/checker.jpg");
-    border: 2px rgb(165, 165, 165) solid;
-    border-radius: 4px;
-    width: 200px;
-    height: 600px;
-    overflow-y: scroll;
-    margin-right: 5px;
-    margin-left: 5px;
-    box-shadow: 0 2px 2px 0 rgba(117, 117, 117, 0.45), 0 11px 5px 0 rgba(0, 0, 0, 0.19);
-}
-
-.objectbank{
-    float: right;
-    border: 2px rgb(165, 165, 165) solid;
-    border-radius: 4px;
     width: 150px;
     height: 600px;
-    overflow-y: scroll;
+    background-color: rgb(106, 127, 144);
+    border: 1px rgb(106, 127, 144) solid;
     margin-right: 5px;
     margin-left: 5px;
+    border-radius: 4px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+}
+
+ #objectholder{
+    height: 500px;
+    width: 130px;
+    border: 2px rgb(165, 165, 165) solid;
+    border-radius: 4px;
+    overflow-y: scroll;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
     background-color: white;
     box-shadow: 0 2px 2px 0 rgba(117, 117, 117, 0.45), 0 11px 5px 0 rgba(0, 0, 0, 0.19);
 }
 
-.imagebank img {
+#imagebank{
+    background-color: rgb(106, 127, 144);
+    border: 1px rgb(106, 127, 144) solid;
+    float: right;
+    width: 150px;
+    height: 600px;
+    margin-right: 5px;
+    margin-left: 5px;
+    border-radius: 4px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+}
+
+
+#imageholder {
+    background-image: url("../image/checker.jpg");
+    border: 2px rgb(165, 165, 165) solid;
+    border-radius: 4px;
+    width: 135px;
+    height: 500px;
+    overflow-y: scroll;
+    margin-right: 5px;
+    margin-left: 5px;
+    box-shadow: 0 2px 2px 0 rgba(117, 117, 117, 0.45), 0 11px 5px 0 rgba(0, 0, 0, 0.19);
+}
+
+#imageholder img {
     width:100%;
     height:auto;
 }
@@ -191,6 +241,7 @@ a{
 
 .divbutton{
     cursor: pointer;
+    font-family: button;
     background-color: rgb(237, 255, 221);
     border: 1px black solid;
     border-radius: 3px;
@@ -200,6 +251,18 @@ a{
     box-shadow: 0px 2px 5px 0px rgba(50, 50, 50, 0.25);
 }
 
+.wintitle{
+    font-family: button;
+    color: white;
+    font-size: 1.25em;
+    display: inline-block;
+    padding: 4px;
+    margin: 2px;
+}
+
+.submenu{
+    
+}
 .entrytitle{
     display: table-cell;
     padding: 4px;
@@ -271,6 +334,8 @@ a{
 
 .clicktr{
     cursor: pointer;
+    font-family: selecttext;
+    font-size: 1.6em
 }
 
 .clicktr:hover{
@@ -281,12 +346,34 @@ a{
     width:98%;
     margin-left: 1%;
     margin-right: 1%;
-    box-shadow: 0px 2px 5px 0px rgba(50, 50, 50, 0.25);
     border-radius: 4px;
 }
+
+#pastediv{
+    background-color: rgb(106, 127, 144);
+    border: 1px rgb(106, 127, 144) solid;
+    margin-left: 1%;
+    margin-right: 1%;
+    border-radius: 4px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+
 
 #menu{
     margin-top: 5px;
     margin-bottom: 5px;
     text-align: center;
+}
+
+
+.sp_05{
+    padding: 5px;
+    display: inline;
+}
+
+.sp_10{
+    padding: 10px;
+    display: inline;
 }
