--- a/css/canvasser.css
+++ b/css/canvasser.css
@@ -237,6 +237,7 @@ a{
   width:50px;
   background-color:rgb(191, 212, 211);
   margin-left: 0px;
+  margin-left: 2px;
   margin-top: 3px;
   margin-bottom: 3px;
   padding: 4px;
