--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -114,7 +114,7 @@ a{
 
 .header{
   display: block;
-  background-color: rgb(243, 243, 243);
+  background-color: white;
   border-bottom: 2px #dadada solid;
   box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   height: 30px;
@@ -141,10 +141,23 @@ a{
   height: 90px;
 }
 
+.button_righter{
+  margin-top: 2px;
+  margin-right: 5px;
+  float: right;
+}
+
 .skinnybank{
   background-color: rgb(86, 86, 86);
   border: 1px rgb(142, 142, 142) solid;
   min-width:160px;
+}
+
+.window_movable{
+  background-color: rgb(86, 86, 86);
+  border: 1px rgb(142, 142, 142) solid;
+  min-width:160px;
+  position: absolute;
 }
 
 .font-larger{
@@ -168,6 +181,7 @@ a{
   margin-top: 5px;
   margin-bottom: 5px;
   background-color: white;
+  max-height:600px;
 }
 
 .padlr{
@@ -204,11 +218,6 @@ a{
   width:60%;
   vertical-align:middle;
   font-size: 15px;
-}
-
-#graphical{
-  display: inline-block;
-  width: 100%;
 }
 
 .activity{
@@ -269,7 +278,7 @@ a{
 }
 
 .authorbk{
-  background-image: url("../image/grid.png");
+  background-color: rgb(220,220,220);
 }
 
 .auth_text{
