--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -1,13 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : May 5, 2016, 12:09:42 PM
-    Author     : user
-*/
-
 @font-face {
   font-family: title;
   src: url(../font/CharriotDeluxe.woff);
@@ -164,8 +154,17 @@ a{
   font-size:larger;
 }
 
-.font-small{
+.version{
   font-size: small;
+  margin: 2px 5px 0px 0px;
+  padding: 5px 5px;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
+.font-medium{
+  font-size: medium;
 }
 
 .mw400{
@@ -181,7 +180,8 @@ a{
   margin-top: 5px;
   margin-bottom: 5px;
   background-color: white;
-  max-height:600px;
+  min-height:20px;
+  resize: both;
 }
 
 .padlr{
@@ -190,6 +190,7 @@ a{
 }
 
 #imageholder{
+  min-height: 20px;
   width: 150px;
   background-image: url("../sample/image/checker.png");
   border: 2px rgb(165, 165, 165) solid;
@@ -199,6 +200,7 @@ a{
   margin-right: auto;
   margin-top: 5px;
   margin-bottom: 5px;
+  resize: both;
 }
 
 #imageholder img {
@@ -215,7 +217,6 @@ a{
 }
 
 .imageid{
-  width:60%;
   vertical-align:middle;
   font-size: 15px;
 }
@@ -236,7 +237,7 @@ a{
   overflow: auto;
   resize: both;
   height: 655px;
-  width: 320px;
+  width: 350px;
   margin-bottom: 5px;
 }
 
