moved code out of body tag

--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -278,8 +278,10 @@ a{
   font-size: .8em;
 }
 
-.authorbk{
+#canvasser_authoring{
   background-color: rgb(220,220,220);
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
 }
 
 .auth_text{
