--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -13,6 +13,121 @@
   src: url(../font/alterebro-pixel-font.woff);
 }
 
+#alertbox{
+  color: white;
+  width: 600px;
+  height: 200px;
+  z-index: 9999;
+  background-color: rgb(51, 0, 0);
+  border: 1px solid black;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 5px solid red;
+  border-radius: 10px;
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.content_alert{
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%);
+}
+
+.title_alert{
+  font-size: 2em;
+  text-align: center;
+}
+
+#loadbox{
+  background-color: rgb(99, 99, 99);
+  border-radius: 10px;
+  border: 5px solid white;
+  bottom: 0;
+  box-shadow: 0 4px 13px 12px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: black;
+  cursor: default;
+  font-family: button;
+  height: 500px;
+  left: 0;
+  margin: auto;
+  padding: 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 400px;
+  z-index: 9998;
+}
+
+#savebox{
+  background-color: rgb(99, 99, 99);
+  border-radius: 10px;
+  border: 5px solid white;
+  bottom: 0;
+  box-shadow: 0 4px 13px 12px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: black;
+  cursor: default;
+  font-family: button;
+  height: 210px;
+  left: 0;
+  margin: auto;
+  padding: 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 400px;
+  z-index: 9998;
+}
+
+.content_load{
+  background-color: white;
+  height: 415px;
+  margin-bottom: 9px;
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.button_load{
+  background-color: rgb(240,240,240);
+  border: 2px black solid;
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  margin-right: 20px;
+  padding: 1px 10px;
+}
+
+.title_load{
+  color: white;
+  font-size: 1.5em;
+  margin-bottom: 5px;
+  text-align: center;
+  width: 100%;
+}
+
+.load_project{
+  background-color: rgb(99, 99, 99);
+  color: white;
+  margin-bottom: 3px;
+  margin-top: 10px;
+  padding-left: 5px;
+  cursor: default;
+}
+
+.load_file{
+  margin-bottom: 2px;
+  padding-left: 15px;
+  cursor: pointer;
+}
+
+.drop_items{
+  margin-top: 4px;
+}
+
 .nosplit{
   display: inline-block;
 }
@@ -93,17 +208,61 @@ a{
   margin-top: 29px;
 }
 
-#saver{
-  background-color: rgb(156, 233, 255);
+#projectholder{
   display: inline-block;
   position: absolute;
-  left: 4px;
-  top: 4px;
+  left: 0px;
+  top: 28px;
   padding: 2px;
   font-family: button;
-  border: 1px solid black;
-  border-radius: 2px;
+}
+
+.menu_dropdown{
+  position: absolute;
+  background-color: white;
+  z-index: 9999;
+  padding: 1px 10px 1px 5px;
+  opacity: .95;
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.menu_items{
+  display: inline-block;
   cursor: pointer;
+  margin-left: 10px;
+}
+
+.saveblock{
+  display:block;
+  margin-bottom: 20px;
+}
+
+.savelabel{
+  display: inline-block;
+  margin-left: 10px;
+  color: white;
+}
+
+.title_save{
+  color: white;
+  font-size: 1.5em;
+  margin-bottom: 5px;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 40px;
+}
+
+.savetextbox{
+  float: right;
+  height: 15px;
+  width: 310px;
+}
+
+.savecheckbox{
+  margin-left: 20px;
+  position: relative;
+  top: 4px;
+  transform: scale(2);
 }
 
 .bottomlinks{
@@ -116,11 +275,11 @@ a{
 }
 
 .header{
-  display: block;
   background-color: white;
   border-bottom: 2px #dadada solid;
   box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  height: 30px;
+  display: block;
+  height: 55px;
 }
 
 .titlebar{
@@ -129,13 +288,13 @@ a{
 }
 
 .titlecenter{
-  font-family: title;
-  text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  font-size: 1.5em;
   color: black;
+  font-family: title;
+  font-size: 1.5em;
+  left: 0;
+  position: absolute;
+  right: 0;
+  text-align: center;
 }
 
 .rightfloater{
@@ -148,6 +307,7 @@ a{
   margin-top: 2px;
   margin-right: 5px;
   float: right;
+  cursor: pointer;
 }
 
 .skinnybank{
