--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -13,32 +13,62 @@
   src: url(../font/alterebro-pixel-font.woff);
 }
 
-#alertbox{
-  color: white;
-  width: 600px;
-  height: 200px;
-  z-index: 9999;
+#alert_box{
   background-color: rgb(51, 0, 0);
-  border: 1px solid black;
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  border: 5px solid red;
   border-radius: 10px;
+  border: 5px solid red;
+  bottom: 0;
   box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: white;
+  font-family: button;
+  height: 200px;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 600px;
+  z-index: 9999;
 }
 
-.content_alert{
+.alert_content{
   left: 50%;
   position: absolute;
   top: 50%;
   transform: translateX(-50%);
 }
 
-.title_alert{
+.alert_title{
+  font-size: 2em;
+  text-align: center;
+}
+
+
+#notice_box{
+  background-color: rgb(26, 26, 26);
+  border-radius: 10px;
+  border: 5px solid rgb(109, 109, 109);
+  bottom: 0;
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: white;
+  font-family: button;
+  height: 400px;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 400px;
+  z-index: 9999;
+}
+
+.notice_content{
+  height: 80%;
+  margin: 10px 20px;
+  overflow-y: scroll;
+}
+
+.notice_title{
   font-size: 2em;
   text-align: center;
 }
@@ -219,7 +249,7 @@ a{
 
 .menu_dropdown{
   position: absolute;
-  background-color: white;
+  background-color: rgb(62, 62, 62);
   z-index: 9999;
   padding: 1px 10px 1px 5px;
   opacity: .95;
@@ -227,6 +257,7 @@ a{
 }
 
 .menu_items{
+  color: white;
   display: inline-block;
   cursor: pointer;
   margin-left: 10px;
@@ -275,11 +306,10 @@ a{
 }
 
 .header{
-  background-color: white;
-  border-bottom: 2px #dadada solid;
-  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: rgb(62, 62, 62);;
+  color: white;
   display: block;
-  height: 55px;
+  height: 51px;
 }
 
 .titlebar{
@@ -288,7 +318,6 @@ a{
 }
 
 .titlecenter{
-  color: black;
   font-family: title;
   font-size: 1.5em;
   left: 0;
