--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -115,10 +115,21 @@
 
 .content_load{
   background-color: white;
-  height: 415px;
-  margin-bottom: 9px;
+  height: 420px;
+  min-width: 250px;
+  margin-bottom: 5px;
   overflow-y: scroll;
   padding: 10px;
+}
+
+.content_load_all{
+  background-color: white;
+  height: 205px;
+  min-width: 250px;
+  margin-bottom: 5px;
+  overflow-y: scroll;
+  padding: 10px;
+  resize: both;
 }
 
 .button_load{
@@ -144,15 +155,28 @@
   color: white;
   margin-bottom: 3px;
   margin-top: 10px;
-  padding-left: 5px;
+  padding: 2px 0px 2px 5px;
   cursor: default;
+  font-family: button;
 }
 
 .load_file{
-  margin-bottom: 2px;
-  padding-left: 15px;
   cursor: pointer;
+  font-family: button;
+  margin-bottom: 2px;
+  margin-left: 20px;
 }
+
+.load_filefolder{
+  border-bottom: 2px solid #bfbfbf;
+  cursor: default;
+  font-family: button;
+  margin-bottom: 2px;
+  margin-right: 5px;
+  margin-top: 10px;
+  padding-left: 10px;
+}
+
 
 .drop_items{
   margin-top: 4px;
