--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -58,12 +58,12 @@
   position: absolute;
   right: 0;
   top: 0;
-  width: 400px;
+  width: 800px;
   z-index: 9999;
 }
 
 .notice_content{
-  height: 80%;
+  height: 300px;
   margin: 10px 20px;
   overflow-y: scroll;
 }
@@ -113,6 +113,26 @@
   z-index: 9998;
 }
 
+#uploadbox{
+  background-color: rgb(99, 99, 99);
+  border-radius: 10px;
+  border: 5px solid white;
+  bottom: 0;
+  box-shadow: 0 4px 13px 12px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: black;
+  cursor: default;
+  font-family: button;
+  height: 210px;
+  left: 0;
+  margin: auto;
+  padding: 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 600px;
+  z-index: 9998;
+}
+
 .content_load{
   background-color: white;
   height: 420px;
@@ -135,6 +155,7 @@
 .button_load{
   background-color: rgb(240,240,240);
   border: 2px black solid;
+  color: black;
   cursor: pointer;
   display: inline-block;
   float: right;
