--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -14,12 +14,12 @@
 }
 
 #alert_box{
-  background-color: rgb(51, 0, 0);
+  background-color: var(--alert-bg-color);
   border-radius: 10px;
   border: 5px solid red;
   bottom: 0;
   box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  color: white;
+  color: var(--alert-color);
   font-family: button;
   height: 200px;
   left: 0;
@@ -45,12 +45,12 @@
 
 
 #notice_box{
-  background-color: rgb(26, 26, 26);
+  background-color: var(--notice-bg-color);
   border-radius: 10px;
   border: 5px solid rgb(109, 109, 109);
   bottom: 0;
   box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  color: white;
+  color: var(--notice-color);
   font-family: button;
   height: 400px;
   left: 0;
@@ -74,12 +74,12 @@
 }
 
 #loadbox{
-  background-color: rgb(99, 99, 99);
+  background-color: var(--loadbox-bg-color);
   border-radius: 10px;
-  border: 5px solid white;
+  border: 5px solid var(--loadbox-border-color);
   bottom: 0;
   box-shadow: 0 4px 13px 12px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  color: black;
+  color: var(--loadbox-color);
   cursor: default;
   font-family: button;
   height: 500px;
@@ -294,7 +294,7 @@ a{
 
 .menu_dropdown{
   position: absolute;
-  background-color: rgb(62, 62, 62);
+  background-color: var(--menu-dropdown-bg);
   z-index: 9999;
   padding: 1px 10px 1px 5px;
   opacity: .95;
@@ -351,14 +351,14 @@ a{
 }
 
 .header{
-  background-color: rgb(62, 62, 62);;
-  color: white;
+  background-color: var(--header-bg-color);
+  color: var(--header-color);
   display: block;
   height: 51px;
 }
 
 .titlebar{
-  background-color: rgb(122, 122, 122);
+  background-color: var(--titlebar);
   cursor: move;
 }
 
@@ -391,8 +391,8 @@ a{
 }
 
 .window_movable{
-  background-color: rgb(86, 86, 86);
-  border: 1px rgb(142, 142, 142) solid;
+  background-color: var(--window-mv-bg);
+  border: 1px var(--window-mv-border) solid;
   min-width:160px;
   position: absolute;
 }
@@ -579,7 +579,7 @@ a{
 
 .wintitle{
   font-family: button;
-  color: white;
+  color: var(--wintitle-color);
   font-size: 1em;
   display: inline-block;
   margin: 2px;
