--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -162,6 +162,7 @@
   float: right;
   margin-right: 20px;
   padding: 1px 10px;
+  user-select: none;
 }
 
 .title_load{
@@ -517,7 +518,7 @@ a{
 
 .auth_xy{
   display: table-cell;
-  width: 65px;
+  width: 50px;
   background-color: rgb(199, 199, 199);
   margin-left: 2px;
   margin-top: 3px;
