--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -193,11 +193,11 @@
 .load_project{
   background-color: rgb(99, 99, 99);
   color: white;
+  cursor: default;
+  font-family: button;
   margin-bottom: 3px;
   margin-top: 10px;
   padding: 2px 0px 2px 5px;
-  cursor: default;
-  font-family: button;
 }
 
 .load_file{
@@ -208,6 +208,7 @@
 }
 
 .load_filefolder{
+  background-color: rgb(240,240,240);
   border-bottom: 2px solid #bfbfbf;
   cursor: default;
   font-family: button;
